# django-social-network

./: README.md  pyproject.toml  pytest.ini
apps/accounts/: admin.py  apis.py  exceptions.py  models.py  urls.py  validators.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/services/: registration.py
apps/accounts/templates/: email_confirmation.html
apps/api/: urls.py
apps/blogs/: apis.py  filters.py  models.py  urls.py
apps/blogs/migrations/: 0001_initial.py  0002_like.py
apps/blogs/selectors/: likes.py  posts.py
apps/blogs/services/: likes.py  post.py  posts.py
apps/users/: apis.py  models.py  permissions.py  urls.py
apps/users/migrations/: 0001_initial.py  0002_follow.py
apps/users/selectors/: profiles.py  subscription.py
apps/users/services/: profile.py  subscription.py
apps/utils/: permissions.py
apps/utils/models/: timestamp.py
config/: settings.py  urls.py
config/apps_config/: drf.py  drf_spectacular.py  jwt.py
config/django/: base.py  local.py  test.py
tests/: conftest.py  factories.py
tests/accounts/: conftest.py  test_apis.py  test_models.py  test_services.py
tests/blogs/: conftest.py  test_apis.py  test_models.py  test_selectors.py  test_services.py
tests/users/: conftest.py  test_apis.py  test_selectors.py  test_services.py
