[tool.poetry]
name = "django-social-network"
version = "0.1.0"
description = ""
authors = ["Ali Shokrollahi <ali.shokrollahi.pro@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
